backend/k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-api-prefix
  namespace: bandcheck
spec:
  addPrefix:
    prefix: /api
